--- a/MiU/Week2/Rockwell_Christopher_project2/Gold/index.html
+++ b/MiU/Week2/Rockwell_Christopher_project2/Gold/index.html
@@ -54,10 +54,10 @@ MiU 1211
 				<div data-role="footer" data-position="fixed" data-id="foot">
 					<div data-role="navbar">
 						<ul>
-							<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b" data-transition="slideup">Home</a></li>
-							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">About</a></li>
-							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="turn">Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">News</a></li>
+							<li><a href="#home" data-icon="home" data-iconpos="top"data-theme="b">Home</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
@@ -240,10 +240,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="turn">About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="turn">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">News</a></li>					
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b">About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a">News</a></li>					
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -284,10 +284,10 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slide" >About</a></li>
-						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="turn">Suggest</a></li>
-						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" data-transition="turn">News</a></li>					
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" >About</a></li>
+						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" >Suggest</a></li>
+						<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a" d>News</a></li>					
 					</ul>
 				</div><!-- /navbar -->
 			</div>
@@ -323,10 +323,10 @@ MiU 1211
 				<div data-role="footer" data-position="fixed" data-id="foot">
 					<div data-role="navbar">
 						<ul>
-							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
-							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slide">About</a></li>
-							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="slide" >Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b" data-transition="turn">News</a></li>
+							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
@@ -370,6 +370,7 @@ MiU 1211
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script src="js/extra.js" type="text/javascript"></script>
+		<script src="js/page.js" type="text/javascript"></script>
+		<!--<script src="js/extra.js" type="text/javascript"></script>-->
 	</body>
 </html>
