--- a/bronze/index.html
+++ b/bronze/index.html
@@ -102,7 +102,7 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="pop">Home</a></li>
 						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="b" data-transition="pop">About</a></li>
 						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a" data-transition="pop">Suggestions</a></li>
 					</ul>
@@ -145,8 +145,8 @@ MiU 1211
 			<div data-role="footer" data-position="fixed" data-id="foot">
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="slide">Home</a></li>
-						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="slide">About</a></li>
+						<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a" data-transition="pop">Home</a></li>
+						<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a" data-transition="pop">About</a></li>
 						<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="b" data-transition="pop">Suggestions</a></li>
 					</ul>
 				</div><!-- /navbar -->
