--- a/MiU/Week2/Rockwell_Christopher_project2/Gold/index.html
+++ b/MiU/Week2/Rockwell_Christopher_project2/Gold/index.html
@@ -232,8 +232,8 @@ MiU 1211
 					<a href="../gold/index.html" data-ajax="false" data-role="button" data-theme="b">Gold</a>
 					<a href="../bronze/index.html" data-ajax="false" data-role="button" data-theme="a">Bronze</a>
 					
-					<p><img src="images/me.jpg" width="80px" height="80px;"/><br>Hello User, <br><br>My name is Chris Rockwell and I am the creator of WishList LayAway.
-					I created this app with the intention of encouraging people to pay cash to by things versus getting it on credit or financing.<br><br>
+					<p><img src="images/me.jpg" width="80px" height="80px;" align="left" style="padding: 0px 5px 0px 0px;"/>Hello User, <br><br>My name is Chris Rockwell and I am the creator of WishList LayAway.
+					I created this app with the intent of encouraging people to pay cash to buy things versus charging their credit card or financing.<br><br>
 					Hope you enjoy the app,<br><br>Chris</p>
 				</div>
 			</div>
@@ -298,7 +298,7 @@ MiU 1211
 				<h1>This months pledges</h1>
 			</div>
 			<div data-role="content">
-				<ul data-role="listview">
+				<ul data-role="listview" data-filter="true">
 					<li data-role="list-divider" style="text-align: center;"><h3>October 1, 2012 - October 31, 2012</h3></li>
 					<li>October 14<br><p style="font-size: 14px; padding-top:10px;">Item: Halo 4<br>
 						Cost: $60 <br>Amount Saved: $10 <br>Time Frame: 0-6 months</p>
