--- a/bronze/index.html
+++ b/bronze/index.html
@@ -94,8 +94,8 @@ MiU 1211
 					<a href="../gold/index.html" data-ajax="false" data-role="button" data-theme="b">Gold</a>
 					<a href="../bronze/index.html" data-ajax="false" data-role="button" data-theme="a">Bronze</a>
 					
-					<p><img src="images/me.jpg" width="80px" height="80px;"/><br>Hello User, <br><br>My name is Chris Rockwell and I am the creator of WishList LayAway.
-					I created this app with the intention of encouraging people to pay cash to by things versus getting it on credit or financing.<br><br>
+					<p><img src="images/me.jpg" width="80px" height="80px;" align="left" style="padding: 0px 5px 0px 0px;"/>Hello User, <br><br>My name is Chris Rockwell and I am the creator of WishList LayAway.
+					I created this app with the intent of encouraging people to pay cash to buy things versus charging their credit card or financing.<br><br>
 					Hope you enjoy the app,<br><br>Chris</p>
 				</div>
 			</div>
