fix display button

--- a/MiU/Week3/Rockwell_Christopher_project3/gold/index.html
+++ b/MiU/Week3/Rockwell_Christopher_project3/gold/index.html
@@ -439,7 +439,7 @@ MiU 1211
 							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
 							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
 							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggest</a></li>
-							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="b">News</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a">News</a></li>
 						</ul>
 					</div><!-- /navbar -->
 				</div>
