--- a/gold/index.html
+++ b/gold/index.html
@@ -426,7 +426,7 @@ MiU 1211
 				</div>
 		</div>
 		
-		<div data-role="page" id="displayPage" >
+		<div data-role="page" id="displayPage" data-add-back-btn="true">
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<h1>Your WishList</h1>
 			</div>
