Completed code for project 3
Got rid of extra files

--- a/MiU/Week3/Rockwell_Christopher_project3/gold/404.html
+++ b/MiU/Week3/Rockwell_Christopher_project3/gold/404.html
@@ -8,6 +8,7 @@
 	</head>
 	
 	<body style="padding: 0px; margin: 0px;">
-			<a href="index.html"><img src="images/404.jpg"></a>
+			<a href="#index" style="margin-left:-100px;><img src="images/404.jpg"></a>
 	</body>
 </html>
+
