--- a/gold/index.html
+++ b/gold/index.html
@@ -23,7 +23,7 @@ MiU 1211
 		<!--Page Title-->
 		<title>WishList LayAway</title>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/home.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script src="js/libs/modernizr.custom.min.js"></script>
 	</head>
 	<body>
@@ -71,17 +71,17 @@ MiU 1211
 			
 			<div data-role="content" data-theme="a">
 				<ul data-role="listview" data-filter="true">
-					<li style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/pri1.jpg" />
 						<h3>Low</h3>
 						<p>Could live without</p>
 					</a></li>
-					<li data-theme="b"><a href="404.html" data-ajax="false">
+					<li data-theme="b"><a href="#errorPage" data-ajax="false">
 						<img src="images/pri2.jpg" />
 						<h3>Medium</h3>
 						<p>Don't want to live without</p>
 					</a></li>
-					<li style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/pri3.jpg" />
 						<h3>High</h3>
 						<p>Can't live without</p>
@@ -108,17 +108,17 @@ MiU 1211
 			
 			<div data-role="content" data-theme="a">
 				<ul data-role="listview" data-filter="true">
-					<li style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/cost2.png" />
 						<h3>Under $500</h3>
 						<p>Cost less that $500</p>
 					</a></li>
-					<li data-theme="b"><a href="404.html" data-ajax="false">
+					<li data-theme="b"><a href="#errorPage" data-ajax="false">
 						<img src="images/cost1.png" />
 						<h3>$500 - $1000</h3>
 						<p>Cost between $500 and $1000</p>
 					</a></li>
-					<li style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/cost2.png" />
 						<h3>Over $1000</h3>
 						<p>Cost over $1000</p>
@@ -145,22 +145,22 @@ MiU 1211
 			
 			<div data-role="content" data-theme="b">
 				<ul data-role="listview" data-filter="true">
-					<li><a href="404.html" data-ajax="false">
+					<li><a href="#errorPage" data-ajax="false">
 						<img src="images/time2.png" />
 						<h3>0 - 6 months</h3>
 						<p>Purchase in the next 6 months</p>
 					</a></li>
-					<li data-theme="a" style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li data-theme="a" style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/time1.png" />
 						<h3>6 months to a year</h3>
 						<p>Purchase in 6 months to a year</p>
 					</a></li>
-					<li><a href="404.html" data-ajax="false">
+					<li><a href="#errorPage" data-ajax="false">
 						<img src="images/time2.png" />
 						<h3>Between 1 - 3 years</h3>
 						<p>Purchase in the next 1 to 3 years</p>
 					</a></li>
-					<li data-theme="a" style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li data-theme="a" style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/time1.png" />
 						<h3>More than 3 years</h3>
 						<p>Purchase in the next 3+ years</p>
@@ -187,22 +187,22 @@ MiU 1211
 			
 			<div data-role="content" data-theme="b">
 				<ul data-role="listview" data-filter="true">
-					<li><a href="404.html" data-ajax="false">
+					<li><a href="#errorPage" data-ajax="false">
 						<img src="images/prog.png" />
 						<h3>0 - 25%</h3>
 						<p>Just getting started</p>
 					</a></li>
-					<li data-theme="a" style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li data-theme="a" style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/prog1.png" />
 						<h3>26% - 50%</h3>
 						<p>Making some noise</p>
 					</a></li>
-					<li><a href="404.html" data-ajax="false">
+					<li><a href="#errorPage" data-ajax="false">
 						<img src="images/prog2.png" />
 						<h3>51% - 75%</h3>
 						<p>You're keeping up the neighbors</p>
 					</a></li>
-					<li data-theme="a" style="padding-left: 1px;"><a href="404.html" data-ajax="false">
+					<li data-theme="a" style="padding-left: 1px;"><a href="#errorPage" data-ajax="false">
 						<img src="images/prog3.png" />
 						<h3>76% - 99%</h3>
 						<p>The last stretch</p>
@@ -387,12 +387,12 @@ MiU 1211
 						</div>
 						<div data-role="fieldcontain" class="ui-field-contain ui-body ui-br">
 							<label for="time" class="select"><h3 style="display:inline;">Purchase Time Frame: *</h3></label>
-							<select name="time" id="time" class="required" >
-							   <option  value="">-- Select an Option --</option>
-							   <option value="0-6 months">0 - 6 months</option>
-							   <option value="6 months to a year">6 months to a year</option>
-							   <option value="Between 1-3 years">Between 1 - 3 years</option>
-							   <option value="More than 3 years">More than 3 years</option>
+							<select name="time" id="time" class="required" ">
+							   <option  data-placeholder="true" value="" >-- Select an Option --</option>
+							   <option id="sel1" value="0-6 months" >0 - 6 months</option>
+							   <option value="6 months to a year" id="sel2">6 months to a year</option>
+							   <option value="Between 1-3 years" id="sel3">Between 1 - 3 years</option>
+							   <option value="More than 3 years" id="sel4">More than 3 years</option>
 						   </select>
 						</div>
 						<div data-role="fieldcontain" class="ui-field-contain ui-body ui-br">
@@ -426,12 +426,32 @@ MiU 1211
 				</div>
 		</div>
 		
-		<div data-role="page" id="displayPage" data-add-back-btn="true">
+		<div data-role="page" id="displayPage" >
 			<div data-role="header" data-position="fixed" data-theme="b">
+				<a href="#additems" data-role="button" data-mini="true">Back</a>
 				<h1>Your WishList</h1>
 			</div>
 			<div data-role="content">
 				<div id="dis"></div>
+			</div>
+			<div data-role="footer" data-position="fixed" data-id="foot">
+					<div data-role="navbar">
+						<ul>
+							<li><a href="#home" data-icon="home" data-iconpos="top" data-theme="a">Home</a></li>
+							<li><a href="#about" data-icon="info" data-iconpos="top" data-theme="a">About</a></li>
+							<li><a href="#sugg" data-icon="grid" data-iconpos="top" data-theme="a">Suggest</a></li>
+							<li><a href="#news" data-icon="info" data-iconpos="top" data-theme="a">News</a></li>
+						</ul>
+					</div><!-- /navbar -->
+				</div>
+		</div>
+		
+		<div data-role="page" id="errorPage" >
+			<div data-role="header" data-position="fixed" data-theme="b">
+				<h1>404 Error</h1>
+			</div>
+			<div data-role="content">
+					<a href="index.html"><img src="images/404.jpg" style="margin-left:-60px; margin-top:-82px;"></a>
 			</div>
 			<div data-role="footer" data-position="fixed" data-id="foot">
 					<div data-role="navbar">
