added functioning edit button and fix progress bars

--- a/MiU/Week4/Rockwell_Christopher_project4/gold/index.html
+++ b/MiU/Week4/Rockwell_Christopher_project4/gold/index.html
@@ -409,7 +409,7 @@ MiU 1211
 							<textarea name="motivation" id="motivation" placeholder="I need this for school."></textarea>
 						</div>
 						<fieldset class="ui-grid-a">
-							<div class="ui-block-a">
+							<div id="ed" class="ui-block-a">
 								<input type="submit" id="submit" value="Submit" data-theme="b"/>
 							</div>
 							<div class="ui-block-b">
