--- a/MiU/Week4/Rockwell_Christopher_project4/bronze/additem.html
+++ b/MiU/Week4/Rockwell_Christopher_project4/bronze/additem.html
@@ -27,6 +27,7 @@ MiU 1211
 		<header>
 			<div id="title">
 				<a href="index.html"><h1>Add Item</h1></a>
+				<img src="images/icon.png" style="margin-top:-40px; margin-right:10px;" alt="Logo" align="right">
 			</div>
 		</header>
 		<div id="about">WishList LayAway is an app that helps wish listers set realistic goals to actually purchase the item or 
