--- a/MiU/Week4/Rockwell_Christopher_project4/gold/index.html
+++ b/MiU/Week4/Rockwell_Christopher_project4/gold/index.html
@@ -30,8 +30,9 @@ MiU 1211
 		
 		<div data-role="page" id="home">
 			
-			<div data-role="header" data-position="fixed" >
-				<h1>WishList LayAway</h1>
+			<div data-role="header" data-position="fixed">
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+				<h1 style="display:block-inline">WishList LayAway</h1>
 			</div>
 			
 			<div data-role="content" >
@@ -67,6 +68,7 @@ MiU 1211
 		<div data-role="page" id="priority">
 			<div data-role="header" data-position="fixed" data-theme="b">
 			<a href="#home" data-role="button" data-mini="true">Back</a>
+			<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Browse by Priority</h1>
 			</div>
 			
@@ -105,6 +107,7 @@ MiU 1211
 		<div data-role="page" id="cost">
 			<div data-role="header" data-position="fixed" data-theme="b" >
 			<a href="#home" data-role="button" data-mini="true">Back</a>
+			<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Browse by Cost</h1>
 			</div>
 			
@@ -143,6 +146,7 @@ MiU 1211
 		<div data-role="page" id="time" data-add-back-btn="true">
 			<div data-role="header" data-position="fixed" data-theme="a" >
 				<a href="#home" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1 style="margin-right: -10px;">Browse by Time Frame</h1>
 			</div>
 			
@@ -186,6 +190,7 @@ MiU 1211
 		<div data-role="page" id="prog" data-add-back-btn="true">
 			<div data-role="header" data-position="fixed" data-theme="a" >
 				<a href="#home" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Browse by Progress</h1>
 			</div>
 			
@@ -228,6 +233,7 @@ MiU 1211
 		
 		<div data-role="page" id="about">
 			<div data-role="header" data-position="fixed" data-theme="b">
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>About</h1>
 			</div>
 			<div data-role="content">
@@ -256,10 +262,11 @@ MiU 1211
 		
 		<div data-role="page" id="sugg">
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<h1>WishList Item Suggestions</h1>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+				<h1>WishList Suggestions</h1>
 			</div>
 			<div data-role="content">
-				<h2>Great items to consider adding to your WishList</h2>
+				<h3>Great items to consider adding to your WishList</h3>
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
 						<h3 style="text-align: center;">iPad 3<br><img src="images/ipad.jpg" width="100%" id="grid-img" /></h3>
@@ -299,6 +306,7 @@ MiU 1211
 		
 		<div data-role="page" id="news">
 			<div data-role="header" data-position="fixed" data-theme="a">
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>This months pledges</h1>
 			</div>
 			<div data-role="content">
@@ -340,6 +348,7 @@ MiU 1211
 		<div data-role="page" id="additems" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#home" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Add Items</h1>
 			</div>
 			<div data-role="content" style="padding:0px;">
@@ -434,7 +443,9 @@ MiU 1211
 		<div data-role="page" id="displayPage" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#additems" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Your WishList</h1>
+				
 			</div>
 			<div data-role="content">
 				<div id="dis"></div>
@@ -453,6 +464,7 @@ MiU 1211
 		
 		<div data-role="page" id="errorPage" >
 			<div data-role="header" data-position="fixed" data-theme="b">
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>404 Error</h1>
 			</div>
 			<div data-role="content">
@@ -473,6 +485,7 @@ MiU 1211
 		<div data-role="page" id="prior1" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#priority" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Low Priority Items</h1>
 			</div>
 			<div data-role="content">
@@ -493,6 +506,7 @@ MiU 1211
 		<div data-role="page" id="prior2" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#priority" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Medium Priority Items</h1>
 			</div>
 			<div data-role="content">
@@ -513,6 +527,7 @@ MiU 1211
 		<div data-role="page" id="prior3" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#priority" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>High Priority Items</h1>
 			</div>
 			<div data-role="content">
@@ -533,7 +548,8 @@ MiU 1211
 		<div data-role="page" id="cost1" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#cost" data-role="button" data-mini="true">Back</a>
-				<h1>Items Under $500</h1>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+				<h1>Cost Under $500</h1>
 			</div>
 			<div data-role="content">
 					<ul data-role="listview" data-filter="true" id="lowCost"></ul>
@@ -553,7 +569,8 @@ MiU 1211
 		<div data-role="page" id="cost2" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#cost" data-role="button" data-mini="true">Back</a>
-				<h1>Items Between $501 and $1000</h1>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+				<h1>Cost $501 - $1000</h1>
 			</div>
 			<div data-role="content">
 					<ul data-role="listview" data-filter="true" id="medCost"></ul>
@@ -573,7 +590,8 @@ MiU 1211
 		<div data-role="page" id="cost3" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#cost" data-role="button" data-mini="true">Back</a>
-				<h1>Items More Than $1001</h1>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+				<h1>Cost More Than $1001</h1>
 			</div>
 			<div data-role="content">
 					<ul data-role="listview" data-filter="true" id="highCost"></ul>
@@ -593,6 +611,7 @@ MiU 1211
 		<div data-role="page" id="time1" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#time" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>0 - 6 Months</h1>
 			</div>
 			<div data-role="content">
@@ -613,6 +632,7 @@ MiU 1211
 		<div data-role="page" id="time2" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#time" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>6 months - 1 year</h1>
 			</div>
 			<div data-role="content">
@@ -633,6 +653,7 @@ MiU 1211
 		<div data-role="page" id="time3" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#time" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Between 1 - 3 years</h1>
 			</div>
 			<div data-role="content">
@@ -653,6 +674,7 @@ MiU 1211
 		<div data-role="page" id="time4" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#time" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>More than 3 years</h1>
 			</div>
 			<div data-role="content">
@@ -673,6 +695,7 @@ MiU 1211
 		<div data-role="page" id="prog1" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#prog" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Progress 0 - 25%</h1>
 			</div>
 			<div data-role="content">
@@ -693,6 +716,7 @@ MiU 1211
 		<div data-role="page" id="prog2" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#prog" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Progress 26 - 50%</h1>
 			</div>
 			<div data-role="content">
@@ -713,6 +737,7 @@ MiU 1211
 		<div data-role="page" id="prog3" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#prog" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Progress 51 - 75%</h1>
 			</div>
 			<div data-role="content">
@@ -733,6 +758,7 @@ MiU 1211
 		<div data-role="page" id="prog4" >
 			<div data-role="header" data-position="fixed" data-theme="b">
 				<a href="#prog" data-role="button" data-mini="true">Back</a>
+				<img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>Progress 75 - 99%</h1>
 			</div>
 			<div data-role="content">
