--- a/bronze/index.html
+++ b/bronze/index.html
@@ -31,7 +31,8 @@ MiU 1211
 		<div data-role="page" id="home">
 			
 			<div data-role="header" data-position="fixed" >
-				<h1>WishList LayAway</h1>
+			               <img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+                  			               <h1>WishList LayAway</h1>
 			</div>
 			
 			<div id="container" data-role="content" >
@@ -86,6 +87,7 @@ MiU 1211
 		
 		<div data-role="page" id="about">
 			<div data-role="header" data-position="fixed" data-theme="b">
+			               <img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
 				<h1>About</h1>
 			</div>
 			<div data-role="content">
@@ -113,10 +115,11 @@ MiU 1211
 		
 		<div data-role="page" id="sugg">
 			<div data-role="header" data-position="fixed" data-theme="b">
-				<h1>WishList Item Suggestions</h1>
+			               <img src="images/icon.png" class="ui-btn-right" id="icon" alt="Logo">
+                  			               <h1>WishList Suggestions</h1>
 			</div>
 			<div data-role="content">
-				<h2>Great items to consider adding to your WishList</h2>
+				<h3>Great items to consider adding to your WishList</h3>
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
 						<h3 style="text-align: center;">iPad 3<br><img src="images/ipad.jpg" width="100%" id="grid-img" /></h3>
